# proof_of_concept

./: .cookiecutterrc  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile-django  Dockerfile-django.production  Dockerfile-node  Dockerfile-node.production  Dockerfile-poetry  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.idea_template/: modules.xml
ansible/: README.md  deploy.yml  inventory  pyproject.toml
ansible/group_vars/all/: vars.yml
ansible/host_vars/test.TODO.com/: vars.yml  vault.yml
ansible/host_vars/vault-template/: vars.yml
ansible/roles/deploy/tasks/: letsencrypt.yml  main.yml
ansible/roles/deploy/templates/: environment  site-nginx.conf
ansible/roles/helpers/: run-management-command.yml  update-nginx-config.yml
ansible/roles/local-mirror/tasks/: mirror_db.yml  mirror_media.yml
ansible/roles/superuser/tasks/: main.yml
app/: .env.development  .eslintrc.js  .old_babelrc  .stylelintrc  Makefile  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
app/src/: middleware.ts
app/src/components/atoms/: Alert.tsx  LinkWithCallback.tsx  SEO.tsx  navLink.tsx
app/src/components/forms/: LoginForm.js
app/src/components/forms/fields/: FormField.js
app/src/components/molecules/: NavBar.tsx  UserComponent.tsx
app/src/pages/: _app.tsx  data.tsx  index.tsx  login.tsx  protected.tsx
app/src/stores/: authentication.ts  index.ts  reducers.ts
app/src/styles/: index.css  misc.css
app/src/styles/components/: navbar.module.scss
app/src/types/: meta.js
app/src/utils/: axios.ts  formErrors.js  logout.ts  text.tsx  user.ts
scripts/: generate_path.py
spa_proof_of_concept/: .prospector.yaml  mypy.ini
spa_proof_of_concept/accounts/rest/: urls.py
spa_proof_of_concept/accounts/tests/: test_admin.py
spa_proof_of_concept/locale/en/LC_MESSAGES/: django.po
spa_proof_of_concept/locale/et/LC_MESSAGES/: django.po
spa_proof_of_concept/settings/: base.py  cloud.py  local.py.example  local_test.py.example  test.py
spa_proof_of_concept/spa_proof_of_concept/: __init__.py  apps.py  asgi.py  storages.py  urls.py  wsgi.py
spa_proof_of_concept/spa_proof_of_concept/tests/: test_health.py  test_views.py
spa_proof_of_concept/static/: 502.html
spa_proof_of_concept/templates/: 500.html
spa_proof_of_concept/templates/emails/: base.html  base.txt  password_reset.html  password_reset.txt
